# SoftSequenceHeap

./: .gitignore  LICENSE  readme.md
soft_sequence_heap/: CMakeLists.txt  circular_linked_list.h  circular_linked_list.tpp  head.h  main.cpp  merge.h  node.h  prune.h  soft_sequence_heap.h  soft_sequence_heap.tpp
soft_sequence_heap/build_ssh/: build_ssh_parallel.h
soft_sequence_heap/data/: generate_data.cpp  generate_data.h  read_data.cpp  read_data.h
soft_sequence_heap/selection/: k_selection.h
soft_sequence_heap/sortedness/: inversion_count.h  longest_ascending_subsequence.h  num_exchanges.h  rank_difference.h  runs.h
soft_sequence_heap/sorting/: chazelle_sorting.h  sorting_by_witnesses.cpp  sorting_by_witnesses.h
soft_sequence_heap/testing/: benchmarks.cpp  benchmarks.h  checksum.cpp  checksum.h  time_measurement.cpp  time_measurement.h
